--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ html{
 body{
     margin: 0;
 }
+
 a{
     text-decoration: none;
 }
@@ -38,7 +39,7 @@ nav>ul{
     list-style: none;
     justify-content: flex-end;
 }
-li>a{
+.link{
     color: var(--background);
     padding: 20px;
     font-size: 1.3rem
@@ -48,6 +49,13 @@ li a:hover{
     color:var(--primary);
     
 }
+
+@media (max-width:500px) {
+    .link{
+        font-size: 1.1em;
+    }
+}
+
 main{
     padding-top: 60px;
     background-color: var(--background);   
@@ -59,6 +67,8 @@ main{
     display: flex;
     align-items: center;
     justify-content:center;
+    background-color: var(--background);
+    
     
     
     
@@ -68,6 +78,7 @@ h1, h2{
     font-family: 'Kanit', sans-serif;
     font-size: 3.5rem;
     margin: 0;
+    text-align: center;
 }
 .title{
     font-size: 5rem;
@@ -101,8 +112,9 @@ h1, h2{
     justify-content: center;
     align-items: center;
     text-align: center;
+
     background: var(--primary);
-    height: 63vh;
+    height: 70vh;
     color: var(--background);
     padding: 2rem;
    
@@ -110,7 +122,25 @@ h1, h2{
 }
 
 .aboutp{
-    width: 800px; 
+    max-width: 800px;
+}
+@media (max-width: 900px){
+    
+    .aboutp{
+        width: 90%;
+    }
+}
+@media (max-width: 500px) {
+    #about{
+        height: 90vh;
+    }
+    h2{
+        font-size: 2.75em;
+    }
+    .title{
+        font-size: 3.65em;
+    }
+ 
 }
 
 #projects{
@@ -119,6 +149,7 @@ h1, h2{
     align-items: center;
     justify-content: center;
     padding: 7rem 0;
+    background-color: var(--background);
 
 
 }
@@ -207,6 +238,11 @@ h1, h2{
         display: none;
     }
 }
+@media (max-width: 600px){
+    .resumephoto{
+        height:500px;
+    }
+}
 .soderimg{
     width:540px;
     height: 540px;
@@ -223,21 +259,30 @@ h1, h2{
 #resume a:hover{
 color: var(--accent)
 }
+
 #contact{
     height: 60vh;
     display:flex;
     align-items: center;
     justify-content: center;
 }
+@media (max-width: 730px){
+    #contact{
+        height: 80vh;
+    }
+}
+
 #contact h2{
     text-align: center;
-    margin-bottom: 3rem;
+    margin-bottom: 1em;
+    margin-top: 2em;
 }
 .icons{
     display: flex;
     justify-content: center;
     gap: 30px;
     flex-wrap: wrap;
+    margin-bottom: 1em;
 
 
 }
@@ -245,7 +290,7 @@ color: var(--accent)
    font-size: 4rem;   
 }
 .fa.fa-github, .material-symbols-outlined.mail, .fa.fa-linkedin-square{
-    padding-right: 10px
+    padding-right: 10px;
 }
 
 .icon-container{
@@ -279,4 +324,8 @@ color: var(--accent)
 
 .contact-info p{
     padding: 0 10px;
+    
+}
+#contact div h2{
+    margin: top
 }
